--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,8 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
+# # .DS_Store
+.DS_Store
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
